Moving personal page content over.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-Hello World
+<html>
+ <head>
+  <title>Paul Suda</title>
+  <link href='https://fonts.googleapis.com/css?family=Cutive+Mono|Permanent+Marker' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
+ </head>
+ <body>
+  <div id="page-wrapper">
+    <div id="content-wrapper">
+      <div id="section-about">
+        <h1>Paul Suda</h1>
+        <ul>
+          <li class="intro">
+            I've been developing web applications since 1998. I'm an experienced team
+            leader, data modeler, back-end coder, front-end browser troubleshooter,
+            server administrator, mentor, and perpetual learner.
+          </li>
+          <li>Currently a software team lead working at <a href="http://civisanalytics.com">Civis Analytics</a>.</li>
+        </ul>
+      </div>
+      <div id="section-social">
+       <ul>
+        <li><a href="http://twitter.com/PaulCSuda">Twitter @PaulCSuda</a></li>
+        <li><a href="http://www.pinterest.com/psuda/">Pinterest</a></li>
+        <li><a href="https://github.com/paulsuda">GitHub</a></li>
+        <li><a href="https://www.facebook.com/paul.suda.7">Facebook</a></li>
+        <li><a href="https://www.linkedin.com/pub/paul-suda/33/264/274">LinkedIn</a></li>
+        <li><a href="mailto:paul@manufaxure.com">paul@manufaxure.com</a> or <a href="mailto:paulsuda@gmail.com">paulsuda@gmail.com</a></li>
+       </ul>
+      </div>
+      <div id="section-footer">
+        <h3>&copy; 2016 Paul Suda</h3>
+      </div>
+    </div>
+  </div>
+ </body>
+</html>
