--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             server administrator, mentor, and perpetual learner.
           </li>
           <li>Currently a software team lead working at <a href="http://civisanalytics.com">Civis Analytics</a>.</li>
+          <li><a href="three.html">My new daily Three.js experiments</a></li>
         </ul>
       </div>
       <div id="section-social">
@@ -30,7 +31,7 @@
        </ul>
       </div>
       <div id="section-footer">
-        <h3>&copy; 2016 Paul Suda</h3>
+        <h3>&copy; 2018 Paul Suda</h3>
       </div>
     </div>
   </div>
