--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             server administrator, mentor, and perpetual learner.
           </li>
           <li>Currently a software team lead working at <a href="http://civisanalytics.com">Civis Analytics</a>.</li>
-          <li><a href="three.html">My new daily Three.js experiments</a></li>
+          <li><a href="threejs.html">My new daily Three.js experiments</a></li>
         </ul>
       </div>
       <div id="section-social">
